# lazytimer

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml
src/: app.rs  config.rs  events.rs  main.rs  scramble.rs  sessions.rs  time_display.rs
src/ui/: confirm_delete.rs  create_session.rs  graph.rs  history.rs  keybinds.rs  mod.rs  scramble.rs  session.rs  solve_details.rs  statistics_screen.rs  stats.rs  timer.rs  timer_screen.rs
src/ui/widgets/: average.rs  history.rs  mod.rs  scramble.rs  session.rs  timer.rs
