[package]
name = "lazytimer"
version = "0.1.0"
license = "MIT"
edition = "2024"
description = "A terminal-based speedcubing timer"
repository = "https://github.com/xyzyx4546/lazytimer"
homepage = "https://github.com/xyzyx4546/lazytimer"
readme = "README.md"
keywords = ["timer", "tui", "terminal", "speedcubing"]
categories = ["command-line-utilities"]
authors = ["David Ehrhardt <d.ehrhardt@proton.me>"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-widgets = "0.4.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
anyhow = "1.0.98"
strum = { version = "0.27.1", features = ["derive"] }
