[package]
name = "lazytimer"
version = "0.2.0"
license = "MIT"
edition = "2024"
description = "A terminal-based speedcubing timer"
repository = "https://github.com/xyzyx4546/lazytimer"
homepage = "https://github.com/xyzyx4546/lazytimer"
readme = "README.md"
keywords = ["timer", "tui", "terminal", "speedcubing"]
categories = ["command-line-utilities"]
authors = ["David Ehrhardt <d.ehrhardt@proton.me>"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tui-widgets = "0.7.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
anyhow = "1.0.100"
strum = { version = "0.27.2", features = ["derive"] }
jiff = { version = "0.2.18", features = ["serde"] }
