[package]
name = "lazytimer"
version = "0.2.1"
license = "MIT"
edition = "2024"
description = "A terminal-based speedcubing timer"
repository = "https://github.com/xyzyx4546/lazytimer"
homepage = "https://github.com/xyzyx4546/lazytimer"
readme = "README.md"
keywords = ["timer", "tui", "terminal", "speedcubing"]
categories = ["command-line-utilities"]
authors = ["David Ehrhardt <d.ehrhardt@proton.me>"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tui-widgets = "0.7.2"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
anyhow = "1.0.102"
strum = { version = "0.28.0", features = ["derive"] }
jiff = { version = "0.2.24", features = ["serde"] }
confy = "2.0.0"
